--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-
+apply plugin: 'com.google.gms.google-services'
 import com.android.build.OutputFile
 
 /**
@@ -129,6 +129,8 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
+          vectorDrawables.useSupportLibrary = true
         applicationId "com.datauser"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -182,6 +184,10 @@ android {
 
 dependencies {
      implementation project(path: ':@react-native-picker_picker')
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 
      
     implementation fileTree(dir: "libs", include: ["*.jar"])
