--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/firestore": "^10.8.0",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
