--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'datauser' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-location', :path => '../node_modules/react-native-location'
+
   target 'datauserTests' do
     inherit! :complete
     # Pods for testing
