--- a/package.json
+++ b/package.json
@@ -10,21 +10,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.8.0",
     "@react-native-firebase/firestore": "^10.8.0",
+    "@react-native-firebase/storage": "^10.8.1",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@ui-kitten/components": "^5.0.0",
     "firebase": "^8.2.9",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-location": "^2.5.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1"
+    "react-native-screens": "^2.17.1",
+    "react-native-svg": "^9.13.6",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
